--- a/Class_11_Example/index.html
+++ b/Class_11_Example/index.html
@@ -27,6 +27,32 @@
 				<a href="#">About Us</a>
 				<a href="#">Get a quote</a>
 			</main>
+			<div class="teaser">
+				<div>
+					<h2>
+						<i class="far fa-thumbs-up"></i> Reliability
+					</h2>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, aspernatur autem.
+					Inventore aperiam nulla eveniet. Enim, asperiores, accusantium laboriosam ducimus unde 
+					consequuntur, tempore nisi doloribus iusto accusamus dicta soluta incidunt.
+				</div>
+				<div>
+					<h2>
+						<i class="far fa-clock"></i> Expertise
+					</h2>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, aspernatur autem.
+					Inventore aperiam nulla eveniet. Enim, asperiores, accusantium laboriosam ducimus unde 
+					consequuntur, tempore nisi doloribus iusto accusamus dicta soluta incidunt.
+				</div>
+				<div>
+					<h2>
+						<i class="far fa-gem"></i> Quality
+					</h2>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, aspernatur autem.
+					Inventore aperiam nulla eveniet. Enim, asperiores, accusantium laboriosam ducimus unde 
+					consequuntur, tempore nisi doloribus iusto accusamus dicta soluta incidunt.
+				</div>
+			</div>
 
 		</article>
 	</body>
