--- a/Interface-online-courses/index.html
+++ b/Interface-online-courses/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Interface Online Classes</title>
-		<link rel="icon" type="images/png" href="images/interface-school.png">
+		<link rel="icon" type="image/png" href="images/interface-school.png">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand|Sarabun">
 		<link rel="stylesheet" href="css/fontawesome-all.css">
 		<link rel="stylesheet"  href="css/standard.css">
@@ -72,6 +72,7 @@
 						<li>HTML Tags &amp; attributes</li>
 						<li>CSS Properties &amp; values</li>
 						<li>Smooth Transitions</li>
+						<li>Transformations</li>
 						<li>Animations</li>
 					</ul>
 				</div>
@@ -147,7 +148,7 @@
 			<h2>FAQ</h2>
 			<div class="boxes">
 				<div class="box">
-					<h3><img src="images/customer-service.png" alt="" class="icon"</h3>
+					<h3><img src="images/customer-service.png" alt="" class="icon"></h3>
 					<h3>Courses</h3>
 					<dl>
 						<dt>Do I need experience?</dt>
@@ -181,6 +182,194 @@
 						<dt>Refunds</dt>
 						<dd>A 100% course refund may be requested within 24 hours of registraion</dd>
 					</dl>
+				</div>
+			</div>
+		</article>
+		<article id="tos">
+			<h2>Terms and Conditions</h2>
+			<div class="boxes">
+				<div class="box">
+					<h3><img class="icon" src="images/law.png"/></h3>
+					<h3>Introduction</h3>
+					<p>
+						These Website Standard Terms and Conditions written on this webpage shall manage your use of pur website,
+						Inter Web School accesibile at https://interfaceSchool.org and Interface Student showcase accesible at
+						https://InterfaceStudentShowcase.com
+					</p>
+
+					<p>
+						These terms will be applied fully and affect your use of this website.
+						By using this Website, you agreed to accept all Terms and Conditions written here.
+						You must not use this website if you disagreewith any of these Website Standard Terms and Condtions.
+					</p>
+
+					<p>
+						Minors or people below the age of 18 years old are not allowed to use this website.
+					</p>
+
+					<h3>Intellectual Property Rights</h3>
+
+					<p> Other than the content you own,under these Terms, Interface Web School and/or its licensors own all the Intellectual 
+						property rights and materials contained in this website.
+					</p>
+
+					<p>
+						You are granted limited license only for purposes of viewing th material contained on this website.
+					</p>
+
+					<h3>Restrictions</h3>
+
+					<p>
+						You are specifically restricted from the following:
+					</p>
+
+					<ul>
+						<li>Publishing any website material in any ohter media;</li>
+						<li>selling, sublicensing, and/or otherwise commercializing any Website material;</li>
+						<li>publicly performing and/or showing any website material;</li>
+						<li>using this website in any way that is or might be damaging to this website;</li>
+						<li>using this website in any way that impacts user acces to this website;</li>
+						<li>using this website contrary to applicable laws and regulations, or in any way that may cause harm to the Website,
+							or to any person or business entity;</li>
+						<li>engaging in any data mining, data harvesting, data extracting or any similar activity in relation to this Website;</li>
+						<li>using this website to engage in any advertising or marketing.</li>
+					</ul>
+
+					<p>
+						Certain areas of this Website are restricted from being accessed by you and Interface Web School may further restrict
+						access by you to any areas of this Website, at any time, in absolute descretion. Any user ID and password you may 
+						have for this Website are confidential and you must maintain confidentiality as well.
+					</p>
+					<h3>Content</h3>
+
+					<p>
+						In these Website Standard Terms and Conditions, "Your content",shall mean any audio, video, text,
+						images or any other materail you wish to display on this Website. By displaying Your Content, you grant
+						Interface Web School a non-exclusive, worldwide irrevocable, sub licensable license to use, reproduce,
+						adapt, publish, tanslate and distribute it in any and all media.
+					</p>
+
+					<p>
+						Your content must be your own and not be invading any third-party's rights. Interface Web School
+						reserves the right to remove any of Your Content from this Website at any time without notice.
+					</p>
+
+					<h3>Your Privacy</h3>
+
+					This privacy notice discloses the privacy practices for interfaceschool.organd InterfaceStudentShowcase.com. This privacy
+					notice applies solely to information collected by this Wesbite. It will notify you of 
+					the following:
+					<ul>
+						<li>What personally identifiable information is collected from you throught the website, how it is used
+							and with whom it may be shared
+						</li>
+						<li>What choices are available to you regarding your data;</li>
+						<li>The security procedures in place to protect the misuse of your data;</li>
+						<li>How you can correct any inaccuracies in the information.</li>
+					</ul>
+					<h3>Information Collection, Use, and Sharing</h3>
+					We are owners of the information collected on this site. We only have access
+					to/collect information that you voluntarily give us via email or other direct contact from you. We will not rent or sell any of this information to anyone.
+
+					<p>
+						We will use your information to respond to you, regarding the reason you contacted us. We 
+						will not share any imformation we've collected with any third-party outside this orgainization, other than as necessary to fulfill your request, e.g. to ship.
+						an order.
+					</p>
+
+					<p>
+						Unless you ask us not to, we may contact you via email in the future to contact you about special, new products, and service
+						or any changes with policy.
+					</p>
+
+					<h3>Your Access to and Control Over Information</h3>
+
+					<p>
+						You may opt out of any future contacts from us at any time. You can do the following at any tiem,
+						by contacting us via the email address on our Website.
+					</p>
+
+					<ul>
+						<li>See what data we have about you, if any,</li>
+						<li>Change/correct any data we have about you,</li>
+						<li>Have us delete any data we have about you,</li>
+						<li>Express any concern you have over the use of your data.</li>
+					</ul>
+					<h3>Security</h3>
+					We take precautions to protect your information. When you submit sensitive information, your information
+					is protected on and off the Website.
+
+					<p>
+						Wherever we collect sensitive information(such as credit card data), that information is encrypted 
+						and transmitted to us in a secure way.You can verify this by looking for a lock icon in the address bar 
+						and looking for "https" at the beginning of the webpage address.
+					</p>
+
+					<p>
+						While we use encryption to protect sensitve information transmitted online we also protect your 
+						information offline. Only employees who need the information to perform a certain job e.g. (billing or customer-service) are granted a
+						access to personally indentifiable information are kept in a secure environment.
+					</p>
+
+					<p>
+						If you feel we are not abiding by this privacy policy you should contact us immediately 
+						via email at <a href="mailto:hello@interfaceschool.com">hello@interfaceschool.com</a>.
+					</p>
+
+					<h3>No Warranties</h3>
+
+					<p>
+						This is provided "as is" with all faults, Interface Web School express no representations or
+						Warranties, of any kind related to this Wesbite or the materials contained on this Website.
+						Also, nothing contained on this website shall be interpreted as advising you.
+					</p>
+
+					<h3>Limitation of Liability</h3>
+
+					<p>
+						In no event shall Interface Web School, nor any of its officers, directors and employees shall be 
+						held liable for anything arising out of or in anyway connected with your use of this website whether 
+						such liability is under contract. In no event shall Interface Web School, nor any of its officers, directors and employees shall be 
+						held liable for any indirect, consequential or any special liabilty arisng out of or in anyway related
+						to your use of this Wesbite.
+					</p>
+
+					<h3>Idemntication</h3>
+					
+					<p>
+						You hereby identify to the fullest extent Interface Web School from and against and/or all liabilities,
+						costs, demands, causes of actions, damages and expenses arising in anyway that may be related to you breach
+						of any provisions of these terms.
+					</p>
+
+					<h3>Severability</h3>
+					<p>
+						If any provision of these terms is found to be invalid under any applicable law, such provisions
+						shall be deleted without affecting any other remaing provisions hereby.
+					</p>
+
+					<h3>Variation of Terms</h3>
+					<p>
+						Interface Web School is permitted to revise these terms at any time it sees fit, and by using This
+						Website you are expected to review these terms on a regular basis.
+					</p>
+
+					<h3>Assignments</h3>
+					<p>
+						The Interface Web School is allowed to assign, transfer and subcontract its rights and/or obligations
+						under these terms without any notification. However,you are not allowed to assign,transfer or subcontract
+						any of your rights without notification and/or under these terms.
+					</p>
+					<h3>Entire Agreement</h3>
+					<p>
+						These terms constitute the entire agreement between interface Web School and you in relation
+						to your use of this Website. And supersede all prior agreements and understadnings.
+					</p>
+					<h3>Governing Law &amp; Jurisdiction</h3>
+					<p>
+						These Terms will be Governed and interpreted in accordance with the laws in the State of Nebraska, and you
+						submit to the non-exclusive Jurisdiction of the state and federal courts located in US for the resolution of any disputes.
+					</p>
 				</div>
 			</div>
 		</article>
