--- a/class-12/index.html
+++ b/class-12/index.html
@@ -21,7 +21,7 @@
 				<a href="news.html">News</a>
 				<a href="contact.html">Contact</a>
 				<a href="more.html">More</a>
-				<a href="#"><i class="fa-solid fa-plus"></i></a>
+				<a href="#"><i class="fas fa-plus"></i></a>
 			
 			</nav>
 		</header>
@@ -31,7 +31,7 @@
 				<h1>We are old school Web Designers
 					<br>& Developers from New York
 				</h1>
-				<a href="services.html">Hire Us Now<i class="fa-solid fa-right"></i></a>
+				<a href="services.html">Hire Us Now <i class="fas fa-arrow-right"></i></a>
 			</main>
 		</div>
 	</body>
