--- a/chipotle/index.html
+++ b/chipotle/index.html
@@ -6,39 +6,47 @@
 		<link href="css/fontawesome-all.css" rel="stylesheet">
 	</head>
 	<body>
-		<header>
-			<div id="topbar">
-				<a href="careers.html">Careers</a>
-				<a href="giftcard.html">Gift Cards</a>
-				<a href="signin.html">Sign-in/register</a>
-		</div>
-			<nav>
-				<div><img class="logo" src="images/hw-logo.png"></div>
-				<a href="menu.html">Menu</a>
-				<a href="nutrition.hmtl">Nutrition</a>
-				<a href="integrity.html">Food with Integrity</a>
-				<a href="new.hmtl">What's New</a>
-				<a href="catering.html">Catering</a>
-				<a href="delivery.html">Delivery</a>
-				<a href="talk.html">Talk to Us</a>
-				<button onclick="search.html"><i class="fas fa-search"></i></a></button>
-				<button onclick="locations.html">Locations</button>
-				<button onclick="order.html">Order</button>
-			</nav>
-			
-		</header>
-		<span>
-			<div id="appad">
-				<p>Get to know our new app!</p><i class="fas fa-chevron-down"></i>
+	
+	<header>
+		<img class="logo" src="images/hw-logo.png">
+		<nav>
+			<a href="menu.html">Menu</a>
+			<a href="nutrition.hmtl">Nutrition</a>
+			<a href="integrity.html">Food with Integrity</a>
+			<a href="new.hmtl">What's New</a>
+			<a href="catering.html">Catering</a>
+			<a href="delivery.html">Delivery</a>
+			<a href="talk.html">Talk to Us</a>
+			<div id="options">
+				<span id="giftcard">
+					<a href="careers.html">Careers</a>
+					<a href="giftcard.html">Gift Cards</a>
+					<a href="signin.html">Sign-in/register</a>
+				</span>
+				<span id="grey">
+					<a href=<i class="fas fa-search"></i></a>
+					<a href="locations.html">Locations</a>
+					<a href="Order.html">Order Now</a>	
+				</span>
 			</div>
-		</span>
+		</nav>	
+	</header>
 
-		<div id="likeit">
+		<div id="subheader">
+			Get to know our new app!<i class="fas fa-chevron-down"></i>
+		</div>
+
+
+	<article id="home">
+		<main>
 			<h1>Just the way you like it</h1>
+			We've got options to suit all dietary needs<a href="nutrition.html"><i class="fas fa-arrow-right"></i></a>
+		</main>
+
+		<div class="page-right">
+			<i class="fal fa-angle-right"></i>
 		</div>
-		<div id="likeit2">
-			<h2>We've got options to suit all dietary needs</h2><a href="nutrition.html"><i class="fas fa-arrow-right"></i></a>
-		</div>
+	</article>
 
 
 	</body>
