--- a/final-portfolio/about.html
+++ b/final-portfolio/about.html
@@ -26,6 +26,7 @@
         </div>
             <img src="images/placeholder.png" id="placeholder" alt="headshot">
         </aside>
+    <section id="about">
         <div class="mystory">
             <h1>My Journey to becoming a Web Developer</h1>
             <h3 id="passion">How I Found my Passion During a Global Pandemic</h3>
@@ -38,6 +39,8 @@
                 but I'm thrilled that I did.
             </p>
         </div>
+    </section>
+    <section>
         <div id="strength">
             <h3>My Strengths</h3>
            <ul>
@@ -47,5 +50,11 @@
                 <li>Self-starter</li>
            </ul>
         </div>
+    </section>
+<footer>
+    <div class="footer1">
+        <p>Joseph Brunkhorst Web Development</p>
+    </div>
+</footer>
 </body>
 </html>
