--- a/final-portfolio/index.html
+++ b/final-portfolio/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/standard.css">
     <link href="css/fontawesome-all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     
 </head>
 <body>
@@ -32,29 +33,46 @@
             just a project reach out to me:
             </p>
             <a href="contact.html">Contact Information</a>
+            <img src="images/contact.jpg" id="contactpic">
     </aside>
-<section id="home-main">
+
+
+<section class="home-main">
     <div class="container">
-        <h2>My Work</h2>
-        <p>I have experience with HTML, CSS, JavaScript and JQuery. 
-            These projects showcase my expertise in these areas. <br>
-            These are projects I made in my Foundations of Web Development 
-            course at AIM Code School.<br><a href="mywork.html">Check out my
-                work here</a>!
+
+        <section class="teaser">
+            <h2>My Work</h2>
+            <p>I have experience with HTML, CSS, JavaScript and JQuery.
+                These projects showcase my expertise. 
+            <br><a href="mywork.html">Check out my
+                work here</a>!<br>
+                <img src="images/styleconhome.png" class="pic">
         </p>
-    
-        <h2>Resumé</h2>
-        <p>Work history, education and experience with web development: </p>
-        <a href="resume.html">Experience and education</a>
-    </div>
-    <div id="div2">
-        <h2>About me</h2>
-        <p>
-            How and why a global pandemic sparked my passion for Web Development:
-        <a href="about.html">My Story</a>
-        </p>
+        </section>
+        <section class="teaser">
+            <h2>Resumé</h2>
+            <p>Work history, education and experience with web development: </p>
+            <a href="resume.html">Experience and education  <i class="fas fa-file"></i></a>
+            <img src="images/images.jpg" class="pic">
+        </section>
+        <section class="teaser">
+            <h2>About me</h2>
+            <p>
+                How and why a global pandemic sparked my passion for Web Development:
+            <a href="about.html">My Story</a>
+            <img src="images/coding.jpg" class="pic">
+            </p>
+        </section>
+
     </div>
 </section>
 
+
+
+<footer>
+    <div class="footer1">
+        <p>Joseph Brunkhorst Web Development</p>
+    </div>
+</footer>
 </body>
 </html>
