--- a/image-slider/index.html
+++ b/image-slider/index.html
@@ -23,7 +23,7 @@
 
         <div class="arrows">
             <a class="prev" href="#"><</i></a>
-            <a class="next" href="#">></a>
+            <a class="next" href="#"></a>
         </div>
 
         <div class="pager">
