--- a/Class11_mobile /index.html
+++ b/Class11_mobile /index.html
@@ -5,13 +5,13 @@
 		<link rel="stylesheet" href="css/standard.css">
 		<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 		<link href="css/fontawesome-all.css" rel="stylesheet">
-		<link href="css/mobile.css" media="(hover:none) and (orientation:portrait)">
+		<link href="css/mobile.css" rel="stylesheet" media="(hover:none) and (orientation:portrait)">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="js/mobile.js" rel="javascript"></script>
 	</head>
 	<body>
-		<span>fancy</span>
+		<span id="fancy">fancy</span>
 		<header>
-			
 			<i class="fas fa-bars" id="menu"></i>
 
 			<nav>
