--- a/orange-cat-final/index.html
+++ b/orange-cat-final/index.html
@@ -52,8 +52,8 @@
 
     <div id="callus" class="pleasecall">
         <button class="leave" id="exitcontact"></button>
-        <h1>402-555-5555 <i class="fab fa-facebook-square"></i>
-        <i class="fab fa-twitter-square"></i></h1>
+        <h1 id="phonenumber">402-555-5555<i class="fab fa-facebook-square"></i>
+            <i class="fab fa-twitter-square"></i></h1><h1></h1>
     </div>
 
 
@@ -87,7 +87,7 @@
             <a href="#home">Home</a>
             <a href="#about">About</a>
             <button type="button" id="schedule">Schedule</button>
-            <button type="button" onclick="ani()" value="click" id="contactus">Contact</button>
+            <button type="button" value="click" id="contactus">Contact</button>
         </nav>
     </footer>
     
