Thanks for the great instruction

--- a/final-portfolio/about.html
+++ b/final-portfolio/about.html
@@ -28,7 +28,7 @@
         </aside>
     <section id="about">
         <div class="mystory">
-            <h1>My Journey to becoming a Web Developer</h1>
+            <h1 class="aboutheaders">My Journey to becoming a Web Developer</h1>
             <h3 id="passion">How I Found my Passion During a Global Pandemic</h3>
             <p id="journey"> I graduated from Westside High School in 2019 where I was a staff writer for 
                 the school newspaper and volunteered to help students learn pottery after school.
@@ -42,7 +42,7 @@
     </section>
     <section>
         <div id="strength">
-            <h3>My Strengths</h3>
+            <h3 class="aboutheaders">My Strengths</h3>
            <ul>
                 <li>Leadership</li>
                 <li>Quick-learner</li>
